# tfe-oxide

./: .editorconfig  .gitattributes  .github-labels.json  .gitignore  .gitmodules  .gitpod.yml  .markdownlintignore  .pre-commit-config.yaml  .stignore  Cargo.toml  Makefile.toml  README.md  RELEASE_CHECKLIST.md  _typos.toml  cspell.config.yaml  deny.toml  rustfmt-stable.toml  rustfmt.toml
.cargo/: config.toml
.cspell/: generic.txt  libs.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: epic.yml
.github/workflows/: release.yml
src/: lib.rs
src/core/: errors.rs  mod.rs  reqwest.rs
src/jsonapi/: error.rs  failure.rs  mod.rs  success.rs
src/utils/: mod.rs  random.rs
